--- a/packages/glider-api/package.json
+++ b/packages/glider-api/package.json
@@ -14,20 +14,20 @@
     "test": "sst test"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.83.0",
+    "@aws-sdk/client-s3": "3.86.0",
     "pino-lambda": "3.0.1",
     "uuid": "8.3.2",
-    "zod": "3.14.4"
+    "zod": "3.15.1"
   },
   "devDependencies": {
     "@serverless-stack/cli": "0.69.5",
     "@serverless-stack/resources": "0.69.5",
     "@tsconfig/node14": "1.0.1",
-    "@types/aws-lambda": "8.10.70",
-    "@types/node": "= 14",
+    "@types/aws-lambda": "8.10.95",
+    "@types/node": "14.18.16",
     "@types/uuid": "8.3.4",
-    "aws-cdk-lib": "2.15.0",
-    "jest": "28.0.3",
+    "aws-cdk-lib": "2.23.0",
+    "jest": "28.1.0",
     "pino-pretty": "7.6.1",
     "typescript": "4.6.4"
   },
