--- a/packages/glider-connectors/package.json
+++ b/packages/glider-connectors/package.json
@@ -11,7 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.83.0",
+    "@aws-sdk/client-s3": "3.86.0",
     "dateformat": "4.6.3",
     "mysql2": "2.3.3",
     "pino": "7.11.0",
@@ -20,8 +20,6 @@
   "devDependencies": {
     "@types/dateformat": "5.0.0",
     "@types/uuid": "8.3.4",
-    "jest": "28.0.3",
-    "pino-pretty": "7.6.1",
-    "typescript": "4.6.4"
+    "pino-pretty": "7.6.1"
   }
 }
