--- a/packages/glider-runner/package.json
+++ b/packages/glider-runner/package.json
@@ -11,7 +11,6 @@
     "start": "docker run --rm glider-runner"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.83.0",
     "got": "11.8.3",
     "mysql2": "2.3.3",
     "pino": "7.11.0",
@@ -19,10 +18,7 @@
     "yargs": "17.4.1"
   },
   "devDependencies": {
-    "@tsconfig/node16": "1.0.2",
     "@types/uuid": "8.3.4",
-    "jest": "28.0.3",
-    "pino-pretty": "7.6.1",
-    "typescript": "4.6.4"
+    "pino-pretty": "7.6.1"
   }
 }
