--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "7.17.10",
     "@babel/preset-env": "7.17.10",
     "@babel/preset-typescript": "7.16.7",
+    "@tsconfig/node16": "1.0.2",
     "@types/jest": "27.5.0",
     "@types/node": "17.0.31",
     "babel-jest": "28.1.0",
