--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-import-resolver-typescript": "2.7.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "26.1.5",
+    "jest": "28.1.0",
     "prettier": "2.6.2",
     "typescript": "4.6.4"
   }
