--- a/packages/glider-runner/tsconfig.json
+++ b/packages/glider-runner/tsconfig.json
@@ -5,7 +5,5 @@
     "outDir": "dist"
   },
   "include": ["src"],
-  "references": [
-    { "path": "../glider-connectors" }
-  ]
+  "references": [{ "path": "../glider-connectors" }]
 }
