--- a/packages/glider-runner/package.json
+++ b/packages/glider-runner/package.json
@@ -15,7 +15,8 @@
     "mysql2": "2.3.3",
     "pino": "7.11.0",
     "uuid": "8.3.2",
-    "yargs": "17.4.1"
+    "yargs": "17.4.1",
+    "yauzl": "2.10.0"
   },
   "devDependencies": {
     "@types/uuid": "8.3.4",
