--- a/packages/glider-runner/Dockerfile
+++ b/packages/glider-runner/Dockerfile
@@ -1,4 +1,10 @@
-FROM node:16-alpine
+# Prisma binaries doesn't run on Alpine on ARM yet, so we use Debian instead.
+#
+# Issue: https://github.com/prisma/prisma/issues/8478
+FROM node:16
+
+# TODO(ptr): re-enable when we switch back to Alpine
+#RUN apk --no-cache add openssl
 
 WORKDIR /app
 
@@ -8,12 +14,7 @@ COPY packages/glider-connectors/package.json packages/glider-connectors/package.
 COPY packages/glider-runner/package.json packages/glider-runner/package.json
 RUN npm ci
 
-COPY tsconfig.json .
-COPY tsconfig.build.json .
-
 COPY packages/glider-connectors packages/glider-connectors
 COPY packages/glider-runner packages/glider-runner
-
-RUN npm run build
 
 ENTRYPOINT ["node", "packages/glider-runner/dist/app.js"]
