--- a/packages/glider-runner/package.json
+++ b/packages/glider-runner/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "docker:build": "docker build -t glider-runner -f ./Dockerfile ../..",
-    "start": "docker run --rm glider-runner"
+    "start": "docker run --rm --mount type=bind,src=/Users/paul/Development/balsa/cloud/packages/glider-plugin-atlassian-oauth,dst=/app/plugins/atlassian-oauth glider-runner"
   },
   "dependencies": {
     "got": "11.8.3",
@@ -19,6 +19,7 @@
     "yauzl": "2.10.0"
   },
   "devDependencies": {
+    "@types/glider": "*",
     "@types/uuid": "8.3.4",
     "pino-pretty": "7.6.1"
   }
