--- a/packages/glider-runner/package.json
+++ b/packages/glider-runner/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "docker:build": "docker build -t glider-runner -f ./Dockerfile ../..",
-    "start": "docker run --rm --mount type=bind,src=/Users/paul/Development/balsa/cloud/packages/glider-plugin-atlassian-oauth,dst=/app/plugins/atlassian-oauth glider-runner"
+    "start": "docker run --rm --mount type=bind,src=/Users/paul/Development/balsa/cloud/packages/glider-plugin,dst=/app/plugins/balsa glider-runner"
   },
   "dependencies": {
     "got": "11.8.3",
