--- a/packages/glider-runner/Dockerfile
+++ b/packages/glider-runner/Dockerfile
@@ -1,7 +1,19 @@
-# Prisma binaries doesn't run on Alpine on ARM yet, so we use Debian instead.
+# Prisma binaries doesn't run on Alpine on ARM yet, so we use Debian instead. We
+# specify `bullseye` to avoid problems observed with the default `16` which uses
+# `buster`. On Docker for Mac, `buster` occasionally takes 5s to resolve
+# `host.docker.internal`, leading to Prisma connection timeouts.
+#
+# See related issue in Docker for Mac's GitHub repo:
+# https://github.com/docker/for-mac/issues/5548#issuecomment-1029204019
+#
+# NOTE(ptr): Node 18 uses `bullseye` by default, so we can remove the OS version
+# spec when we upgrade.
+#
+# TODO(ptr): don't forget to update the base image in the binary-fetching script
+# in @balsa/glider-plugin when you switch back to Alpine!
 #
 # Issue: https://github.com/prisma/prisma/issues/8478
-FROM node:16
+FROM node:16-bullseye
 
 # TODO(ptr): re-enable when we switch back to Alpine
 #RUN apk --no-cache add openssl
