--- a/packages/glider-api/package.json
+++ b/packages/glider-api/package.json
@@ -11,7 +11,7 @@
     "deploy": "sst deploy",
     "remove": "sst remove",
     "start": "sst start",
-    "test": "sst test"
+    "test": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.86.0",
@@ -20,19 +20,14 @@
     "zod": "3.15.1"
   },
   "devDependencies": {
-    "@serverless-stack/cli": "0.69.7",
-    "@serverless-stack/resources": "0.69.7",
+    "@serverless-stack/cli": "1.1.0",
+    "@serverless-stack/resources": "1.1.0",
     "@tsconfig/node14": "1.0.1",
     "@types/aws-lambda": "8.10.95",
     "@types/node": "14.18.16",
     "@types/uuid": "8.3.4",
-    "aws-cdk-lib": "2.23.0",
+    "aws-cdk-lib": "2.24.0",
     "pino-pretty": "7.6.1",
     "typescript": "4.6.4"
-  },
-  "eslintConfig": {
-    "extends": [
-      "serverless-stack"
-    ]
   }
 }
