--- a/packages/glider-api/package.json
+++ b/packages/glider-api/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.92.0",
-    "pino-lambda": "3.0.1",
+    "pino": "7.11.0",
+    "pino-lambda": "4.0.0",
     "uuid": "8.3.2",
     "zod": "3.16.0"
   },
