SST 1.0 testing harness

--- a/packages/glider-api/package.json
+++ b/packages/glider-api/package.json
@@ -10,8 +10,7 @@
     "build": "sst build",
     "deploy": "sst deploy",
     "remove": "sst remove",
-    "start": "sst start",
-    "test": "jest"
+    "start": "sst start"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.92.0",
