--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint packages",
     "prettier": "prettier -w .",
     "prettier:check": "prettier -c .",
-    "test": "jest --passWithNoTests && npm run -w @glider/api test",
+    "test": "jest",
     "typecheck": "npm run build"
   },
   "workspaces": [
