root API scripts

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "lint": "eslint packages",
     "prettier": "prettier -w .",
     "prettier:check": "prettier -c .",
+    "api:build": "npm run -w @glider/api build",
+    "api:deploy": "npm run -w @glider/api deploy",
+    "api:remove": "npm run -w @glider/api remove",
+    "api:start": "npm run -w @glider/api start",
     "test": "jest",
     "typecheck": "npm run build"
   },
